--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,13 @@
         android:theme="@style/Theme.DevAndArt"
         tools:targetApi="31">
         <activity
-            android:name=".ui.screen.home.login.WebViewActivity"
+            android:name=".ui.screen.home.HomeActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.screen.home.login.LoginActivity"
+            android:name=".ui.screen.login.WebViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.screen.login.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
